** KPILOT CHANGELOG **
======================

TODO: let the memofile conduit use the PilotMemoInfo class instead of its
  hand-rolled own interpretation of the memo info.
TODO: get an innocuous database to run PilotLocalDatabase tests with.
TODO: move PilotLocalDatabase to a QValueVector<PilotRecord *>.
TODO: provide template-based, interpreted databases much like the
  AppInfo classes now have.

2005-04-18  Adriaan de Groot
* Being on vacation doesn't mean I'm not on the job. Doxied a lot, did some cleanup.
* Renamed PilotLocalDatabase::writeID() and changed its signature, since it
  was kind of stupid. Doxied it, too.

2005-04-12  Adriaan de Groot
* For a lark, and for David, re-added some KDE 3.2 compatibility code.
* Template madness! An easy way to create the right appinfo's from any database.

2005-04-11  Adriaan de Groot
* Bumped KPilot version.
* Added a test program for some parts of the library. Woo! A first!
  Finally something resembling actual software engineering in KPilot.
* Cleaned up headers that weren't including all required (system) headers.
* Moved all the conduits to the new SyncMode.

2005-04-10  Adriaan de Groot
* Some useful patches from Philip T. to the vcal conduit committed.
* Made the sync mode a full-fledged class and ported lib/ and kpilot/
  to use it. Disabled all the conduits for the time being. Bumped the
  conduit API because of this. This might cause some serious breakage
  for the time being.

2005-04-09  Adriaan de Groot
* Geez, can we switch to Subversion yet?
* Committed the weird-ass record conduit template changes. This makes the
  RecordConduit a fully templated "container". You plug in 5 other classes
  to get a working implementation. This is similar to what the record
  conduit already. The main difference is that it is easier to re-use
  the things you plug into the recordconduit template. I have a KNotes
  partial implementation that wraps KCal::Calendar, so that is immediately